[package]
version = "0.0.1"
edition = "2018"
name = "grpc_util"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
bytes = "1.0"
futures = "0.3"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.0", features = ["net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.22"
tokio-util = { version = "0.2", features = ["codec"] }
tonic = { version = "0.4", features = ["transport", "codegen", "tls", "tls-roots", "prost"] }

