[package]
version = "0.0.1"
edition = "2018"
name = "nailgun"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
async_latch = { path = "../async_latch" }
bytes = "1.0"
futures = "0.3"
log = "0.4"
nails = { git = "https://github.com/tdyas/nails", rev = "889abe4e63a27899d2f6ce50adc8489b289a19b0" }
os_pipe = "0.9"
task_executor = { path = "../task_executor" }
tokio = { version = "1.0", features = ["fs", "io-std", "io-util", "net", "signal", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
