[package]
version = "0.0.1"
edition = "2018"
name = "task_executor"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
futures = "0.3"
logging = { path = "../logging" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
workunit_store = { path = "../workunit_store" }
